<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginHorizontal="36dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/Basic"
            android:textColor="@color/white"
            android:textSize="80sp" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                style="@style/Gray.Button"
                android:onClick="onOperationClick"
                android:text="@string/ac" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiplay"
                style="@style/Gray.Button"
                android:layout_marginHorizontal="16dp"
                android:onClick="onOperationClick"
                android:text="@string/multi" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_percent"
                style="@style/Gray.Button"
                android:layout_marginEnd="16dp"
                android:onClick="onOperationClick"
                android:text="@string/percent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_slash"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/slash" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_seven"
                style="@style/Gray.Dark.Button"
                android:onClick="onNumberClick"
                android:text="@string/seven" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_eight"
                style="@style/Gray.Dark.Button"
                android:layout_marginHorizontal="16dp"
                android:onClick="onNumberClick"
                android:text="@string/eight" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_nine"
                style="@style/Gray.Dark.Button"
                android:layout_marginEnd="16dp"
                android:onClick="onNumberClick"
                android:text="@string/nine" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiplication"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/multiplication" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_four"
                style="@style/Gray.Dark.Button"
                android:onClick="onNumberClick"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_five"
                style="@style/Gray.Dark.Button"
                android:layout_marginHorizontal="16dp"
                android:onClick="onNumberClick"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_six"
                style="@style/Gray.Dark.Button"
                android:layout_marginEnd="16dp"
                android:onClick="onNumberClick"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_one"

                style="@style/Gray.Dark.Button"
                android:onClick="onNumberClick"
                android:text="@string/one" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_two"
                style="@style/Gray.Dark.Button"
                android:layout_marginHorizontal="16dp"
                android:onClick="onNumberClick"
                android:text="@string/two" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_three"
                style="@style/Gray.Dark.Button"
                android:layout_marginEnd="16dp"
                android:onClick="onNumberClick"
                android:text="@string/three" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:paddingStart="12dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                style="@style/Gray.Dark.Button"
                android:layout_width="176dp"
                android:onClick="onNumberClick"
                android:paddingStart="36dp"
                android:text="@string/zero"
                android:textAlignment="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/Gray.Dark.Button"
                android:layout_marginHorizontal="16dp"
                android:onClick="onOperationClick"
                android:text="@string/dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equals"
                style="@style/Gray.Dark.Button"
                android:layout_marginEnd="16dp"
                android:onClick="onOperationClick"
                android:text="@string/equals" />

        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cornerRadius="16dp"
        android:textSize="20sp"
        android:backgroundTint="@color/malina"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>