<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fon"
    tools:context=".SecondActivity">
    <LinearLayout
        android:id="@+id/container"
        android:background="@color/dark_blue"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="80dp" >

        <com.google.android.material.button.MaterialButton
            android:layout_marginStart="10dp"
            android:drawableEnd="@drawable/ic_menu"
            android:backgroundTint="#0000"
            android:layout_width="75dp"
            android:layout_height="80dp" />

        <com.google.android.material.button.MaterialButton
            android:drawableEnd="@drawable/ic_fire"
            android:layout_marginStart="70dp"
            android:backgroundTint="#0000"
            android:layout_width="85dp"
            android:layout_height="80dp" />

        <com.google.android.material.button.MaterialButton
            android:drawableEnd="@drawable/ic_search"
            android:layout_marginStart="70dp"
            android:backgroundTint="#0000"
            android:layout_width="85dp"
            android:layout_height="80dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextPolicies"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="33sp"
        android:textColor="@color/dark_blue"
        android:text="@string/policies"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/TextPolicies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/Buttons"
        android:layout_width="350dp"
        android:layout_height="300dp" >

        <com.google.android.material.button.MaterialButton
            style="@style/ForButton"
            android:paddingStart="-135dp"
            android:text="@string/policy"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.button.MaterialButton
            style="@style/ForButton"
            android:layout_marginVertical="8dp"
            android:text="@string/product_category" />

        <com.google.android.material.button.MaterialButton
            android:layout_marginVertical="2dp"
            style="@style/ForButton"
            android:paddingStart="-30dp"
            android:text="@string/origin_country"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.button.MaterialButton
            style="@style/ForButton"
            android:layout_marginTop="7dp"
            android:paddingStart="-135dp"
            android:text="@string/brand"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextCurrent"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Buttons"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/dark_blue"
        android:text="@string/current_policies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextCurrent"
        android:textSize="20sp"
        app:cornerRadius="19sp"
        android:backgroundTint="@color/malina"
        android:text="@string/export_as_csv"
        android:textAllCaps="false"
        android:layout_width="250dp"
        android:layout_height="70dp" />

</androidx.constraintlayout.widget.ConstraintLayout>